--- a/styles.css
+++ b/styles.css
@@ -102,4 +102,24 @@ li{
     transition: 0.7s;
 }
 
+.projetos h2{
+    margin-bottom: 30px;
+    align-items: center;
+    font-size: 30px;
+    
+}
+.projetos{
+    background-color: rgb(54, 53, 53);
+    color: white;
+    width: 100%;
+    height: 50vw;
+    text-align: center;
+    
+}
+
+footer{
+    background-color: rgb(156, 156, 156);
+    text-align: center;
+    width: 100%;
+}
 
