--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Cabin', sans-serif;
 }
 
 .box{
@@ -21,11 +22,13 @@ nav{
     padding-left: 30px;
     padding-right: 30px;
     padding-top: 25px;
+    font-weight: 400;
 }
 
 .portifolio{
     color: white;
     font-size: 40px;
+    font-weight: 500;
 }
 
 .portifolio span {
@@ -43,6 +46,7 @@ li{
     font-size: 25px;
     margin-right: 30px;
     cursor: pointer;   
+    font-weight: 400;
 }
 .menu:hover{
     color: #f9004d;
@@ -55,6 +59,10 @@ li{
     left: 10%;
     color: white;
     font-size: 20px;
+    font-weight: 500;
+}
+h3{
+    font-weight: 400;
 }
 
 .divNome span{
@@ -78,10 +86,12 @@ li{
 .sobreMim h2{
     color: white;
     font-size: 75px;
+    font-weight: 500;
 }
 .sobreMim p{
     color: white;
     font-size: 18px;
+    font-weight: 400;
 }
 
 .sobreMim button{
@@ -114,12 +124,40 @@ li{
     width: 100%;
     height: 50vw;
     text-align: center;
-    
+    font-weight: 500;
 }
-
+#projeto1{
+    font-weight: 400;
+}
+#projeto2{
+    font-weight: 400;
+}
+#projeto3{
+    font-weight: 400;
+}
 footer{
     background-color: rgb(156, 156, 156);
     text-align: center;
     width: 100%;
+    padding-top: 5px;
+    font-weight: 500;
 }
+
+#imgWhats{
+    width: 30px;
+    margin-right: 50px;
+    padding-top: 5px;
+}
+
+#imgLinkedin{
+    width: 30px;
+    margin-left: 50px;
+}
+
+#imgGit{
+    width: 30px;
+    
+}
+
+
 
